WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
105149
[WK2 NetworkProcess] Bundle uploads don't work
https://bugs.webkit.org/show_bug.cgi?id=105149
Summary
[WK2 NetworkProcess] Bundle uploads don't work
Alexey Proskuryakov
Reported
2012-12-16 21:09:54 PST
Uploading a bundle (such as an application or a Pages document) automatically creates a Zip archive. These archives fail to upload with NetworkProcess. <
rdar://problem/12886898
>
Attachments
proposed fix
(4.89 KB, patch)
2012-12-16 21:16 PST
,
Alexey Proskuryakov
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2012-12-16 21:16:23 PST
Created
attachment 179686
[details]
proposed fix
WebKit Review Bot
Comment 2
2012-12-16 21:41:33 PST
Comment on
attachment 179686
[details]
proposed fix Clearing flags on attachment: 179686 Committed
r137871
: <
http://trac.webkit.org/changeset/137871
>
WebKit Review Bot
Comment 3
2012-12-16 21:41:36 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug