<rdar://problem/12886898> Bundle uploads don't work https://bugs.webkit.org/show_bug.cgi?id=105149

Reviewed by Sam Weinig.

Source/WebCore:

* WebCore.exp.in: Exported FormData::removeGeneratedFilesIfNeeded().

* platform/network/FormData.cpp:
(WebCore::encodeElement):
(WebCore::decodeElement):
Encode generated file name for archive, too. I'm not entirely sure how this affects other uses
of FormData serialization, but it seems logical that if we encode m_hasGeneratedFiles, we
should also encode their names.

Source/WebKit2:

* NetworkProcess/NetworkResourceLoader.cpp:
(WebKit::NetworkResourceLoader::didReceiveResponse):
(WebKit::NetworkResourceLoader::didFail):
Clean up generated files when they are no longer needed. This has to be done before FormData
destruction. This duplicates same work done in WebProcess, but duplicaiton is safe, and may
be helpful if one of the sides prematurely exits.


Canonical link: https://commits.webkit.org/123384@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@137871 268f45cc-cd09-0410-ab3c-d52691b4dbfc